--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=3.3.1 <4.0.0'
 
 dependencies:
+  bloc: ^8.1.4
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
@@ -19,3 +21,4 @@ flutter:
   uses-material-design: true
   assets:
   - 'assets/quran_images/'
+  - 'assets/data/'
