--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -22,3 +23,4 @@ flutter:
   assets:
   - 'assets/quran_images/'
   - 'assets/data/'
+  - 'assets/icons/'
